# Ecstasy

./: .gitignore  CMakeLists.txt
src/: CMakeLists.txt  component.cc  ecstasy.cc  entity.cc  system.cc
src/components/: basic_components.cc  bullets.cc  components.cc
src/components/script/: opcodes.cc  script.cc  vm.cc
src/systems/: basic_systems.cc
src/util/: collision.cc  ct_graph.cc  meta.cc  ring_buffer.cc  shapes.cc  sparse_set.cc  typelist.cc  types.cc  util.cc
test/: CMakeLists.txt  basic_ecs_test.cc  ct_graph_test.cc
